--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ avatar: https://a4-images.myspacecdn.com/images03/1/728a9389cf70449d995db8ba9be9
 footer-links:
   dribbble: 
   email: 
-  facebook: 
+  facebook: muneerpanjwani
   flickr: 
-  github: barryclark/jekyll-now
-  instagram: 
+  github: muneerp
+  instagram: muneerp
   linkedin: 
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
